--- a/example/styles.css
+++ b/example/styles.css
@@ -4,7 +4,7 @@ aside {
     color: #fff;
 }
 
-.content {
+.cs-content {
   position: relative;
   width: 48%;
   height: 300px;
@@ -13,18 +13,19 @@ aside {
   left: 0;
   overflow: hidden;
   float: left;
+  border: 1px solid red;
 }
 
-.view {
+.cs-view {
   position: absolute;
 }
 
-.view p {
+.cs-view p {
     margin-left: 1em;
     margin-right: 1em;
 }
 
-.indicator {
+.cs-indicator {
   position: absolute;
   top: 0;
   right: 0;
